# docs/swagger.json
@@ -712,98 +712,6 @@
                 }
             }
         },
-        "/notification": {
-            "post": {
-                "description": "Create Notifications",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Notification"
-                ],
-                "summary": "Create Notification",
-                "parameters": [
-                    {
-                        "description": "Raw Request Body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MobileNotificationCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.MobileNotification"
-                        }
-                    }
-                }
-            }
-        },
-        "/notification/": {
-            "get": {
-                "description": "Get All Notification based on Id from auth",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Notification"
-                ],
-                "summary": "Get All Notification",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.MobileNotification"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/notification/{id}": {
-            "get": {
-                "description": "Get Notification By ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Notification"
-                ],
-                "summary": "Get Notification By ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Notification ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.MobileNotification"
-                        }
-                    }
-                }
-            }
-        },
         "/pengajuan": {
             "post": {
                 "description": "Create Pengajuan",
@@ -1614,49 +1522,6 @@
                 },
                 "tempat_lahir": {
                     "type": "string"
-                }
-            }
-        },
-        "models.MobileNotification": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "data_pengajuan": {
-                    "$ref": "#/definitions/models.Pengajuan"
-                },
-                "data_pengajuan_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.MobileNotificationCreateRequest": {
-            "type": "object",
-            "properties": {
-                "data_pengajuan_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "status_pengajuan": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
